tests/cases_invalid/misc/module/.expected
error: could not find `missing` module
 --> ./cases_invalid/misc/module/main.shd:1:1
  |
1 | import missing;
  | ^^^^^^^^^^^^^^^ invalid import
  |

error: could not find `nested.missing` module
 --> ./cases_invalid/misc/module/main.shd:2:1
  |
2 | import nested.missing;
  | ^^^^^^^^^^^^^^^^^^^^^^ invalid import
  |

error: could not find `private_buffer` value
 --> ./cases_invalid/misc/module/main.shd:6:5
  |
6 |     private_buffer = 1;
  |     ^^^^^^^^^^^^^^ undefined identifier
  |

error: could not find `private_function()` function
 --> ./cases_invalid/misc/module/main.shd:7:5
  |
7 |     private_function();
  |     ^^^^^^^^^^^^^^^^^^ undefined function
  |

error: could not find `PRIVATE_CONST` value
 --> ./cases_invalid/misc/module/main.shd:8:17
  |
8 |     var value = PRIVATE_CONST;
  |                 ^^^^^^^^^^^^^ undefined identifier
  |

error: could not find `field` field in `PrivateStruct` type
 --> ./cases_invalid/misc/module/main.shd:9:30
  |
9 |     var value = struct_value.field;
  |                              ^^^^^ undefined field
  |

error: could not find `PrivateStruct(i32)` function
  --> ./cases_invalid/misc/module/main.shd:10:17
   |
10 |     var value = PrivateStruct(0);
   |                 ^^^^^^^^^^^^^^^^ undefined function
   |

error: could not find `PrivateStructPubField(i32)` function
  --> ./cases_invalid/misc/module/main.shd:11:17
   |
11 |     var value = PrivateStructPubField(0);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ undefined function
   |

error: could not find `PubStructPrivateField(i32)` function
  --> ./cases_invalid/misc/module/main.shd:12:17
   |
12 |     var value = PubStructPrivateField(0);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ undefined function
   |

error: could not find `PrivateStruct` type
  --> ./cases_invalid/misc/module/main.shd:15:13
   |
15 | fn f(value: PrivateStruct) {}
   |             ^^^^^^^^^^^^^ undefined type
   |
